# mac_code

./: .gitignore  README.md  pyproject.toml
MineSpotify/: MineSpotify.py
MineYT/: .cache  enrich_playlist.py  make_playlist.py  youtube_download.py
PermutationCCC/: CCC_binned_seqs.m  ETC_1D.m  ETC_2D.m  Main_PCCC_surr_analysis.m  Partition.m  README.md  perm_binning_std.m
Studies/: README.md
bhatt-parivar/: .firebaserc
blog_template/: index.html  package-lock.json  styles.css
blunders/: Character Dict.json  Character Map D3.json  Character Map.json  config.yaml  convert_to_json.py  hello.py  index.html  package-lock.json  package.json  raincloud_plots.ipynb  raincloud_plots.py  relation_data.js  script.js  styles.css  test_yaml.py  test_yaml_dump.yaml
dashboard/: README.md  heatmap_adapt_arch.js  heatmap_data_bad.js  heatmap_data_good.js  index.html  my_heatmap.js  script.js  test.html  test.js
edit_mp3/: edit_mp3_mutagen.py
financial_analysis/: dash_app.py  read_data.py  read_excel.py
home/: .block  .gitignore  README.md  ancient_india_timeline.html  blog.html  blog.jade  index copy.html  index.html  landing.html  license.txt  mahabharat_test.html  peace.html  projects.html  projects_old.html  thesis.html  thesis_old.html  work.html
mahabharat/: .block  character data.xlsx  index.html  package-lock.json
maps_api/: .gitignore  creds.json  directions_response.json  generated_points_map.html  index.html  package-lock.json  package.json  script.js  style.css  test_api.ipynb  test_api.py
misc/: combine_pdfs.py  move_images.py  rename_files.py
(+316 files in other folders)
