[project]
name = "Code"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Anurag Bhatt", email = "anurag@odinlabs.in"},
]
dependencies = ["PyPDF2>=3.0.1"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
